--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "EthereumClassicExplorer",
-  "private": false,
+  "name": "Ether1BlockExplorer",
+  "private": true,
   "version": "0.2.0",
-  "description": "A lightweight ethereum classic block explorer",
+  "description": "Ether1 Block Explorer",
   "repository": "https://github.com/ethereumproject/explorer",
   "license": "MIT",
   "scripts": {
